--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -1,11 +1,7 @@
 ---
-layout: headless
+layout: default
 ---
-{% if site.data.authors and site.data.authors[page.author] %}
-{% assign author = site.data.authors[page.author] %}
-{% elsif site.data.authors %}
-{% assign author = site.data.authors[0] %}
-{% endif %}
+{% assign author = site.author %}
 
 {% assign counter = 0 %}
 {% for post in site.posts %}
