--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,16 +8,19 @@ layout: default
             <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
             <section class="post-meta">
                 <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>
-                on
-                {% for tag in page.tags limit:5 %}
-                <span>{{ tag }}</span>
-                {% endfor %}
             </section>
         </header>
 
         <section class="post-content short-diver" itemprop="articleBody">
             {{content}}
         </section>
+
+        <!-- {% for tag in page.tags limit:5 %}
+        {% if forloop.first %}
+        <h5>tags: </h5>
+        {% endif %}
+        <span>{{ tag }}</span>
+        {% endfor %} -->
 
         <footer class="post-footer">
             {% include authorinfo.html param=page.author %}
